--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
+*~
+*.mo
 *.swp
 *,v
-CopyContrib.md5
-CopyContrib.sha1
-CopyContrib.tgz
-CopyContrib.txt
-CopyContrib.zip
-CopyContrib_installer
-CopyContrib_installer.pl
+/CopyContrib.md5
+/CopyContrib.sha1
+/CopyContrib.tgz
+/CopyContrib.txt
+/CopyContrib.zip
+/CopyContrib_installer
+/CopyContrib_installer.pl
